# bioinf-layout

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: dokumentacija.docx
src/: CMakeLists.txt  Graph.cpp  Graph.h  GraphUtils.cpp  GraphUtils.h  IO.cpp  IO.h  MHAPReader.cpp  MHAPReader.h  Overlap.cpp  Overlap.h  OverlapUtils.cpp  OverlapUtils.h  Read.cpp  Read.h  ReadTrim.h  Unitig.h  UnitigUtils.cpp  UnitigUtils.h  common.h  dotter.cpp  dotter.h  main.cpp  params.cpp  params.h
test-data/: lambda_overlaps.mhap
